--- a/views/site/entranc-exam.ejs
+++ b/views/site/entranc-exam.ejs
@@ -1,9 +1,8 @@
 <%- include ../sitelayouts/header.ejs %>
-
     <div class="page_heading">
-    	<img src="../images/banner.jpg" alt="" width="100%" height="150">
+    	<img src="assets/images/banner.jpg" alt="" width="100%" height="150">
     	<div class="pagesub_heading">
-    		<h1>Subject Wise <span class="main_color">Material</span></h1>
+    		<h1>Extrance Exam Wise <span class="main_color">Material</span></h1>
     	</div>
     </div>
 
@@ -13,59 +12,41 @@
 				<nav aria-label="breadcrumb">
 				    <ol class="breadcrumb">
 				      <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-				      <li class="breadcrumb-item active" aria-current="page">Subject Wise</li>
+				      <li class="breadcrumb-item active" aria-current="page">Extrance Exam Wise</li>
 				    </ol>
 				</nav>
 			</div>
 			<div class="col-md-4 col-sm-4 col-xl-3">
 			  <div class="side_barheading">
-			  	<h6 href="subjectwise.html">Subject Wise <i class="fas fa-hand-point-right hand_icon"></i></h6>
+			  	<h6 href="subjectwise.html">Extrance Exam Wise <i class="fas fa-hand-point-right hand_icon"></i></h6>
 			  </div>
 			  <ul class="nav nav-tabs" id="myTab" role="tablist">
 				  <li class="nav-item">
-				    <a class="nav-link active tabbar_heading" data-toggle="tab" href="#activelink" role="tab" aria-controls="home"><i class="fas fa-chevron-right"></i> Environment</a>
+				    <a class="nav-link active tabbar_heading" data-toggle="tab" href="#activelink" role="tab" aria-controls="home"><i class="fas fa-chevron-right"></i> IIT-JEE(MAINS)</a>
 				  </li>
 				  <li class="nav-item">
-				    <a class="nav-link" data-toggle="tab" href="#link1" role="tab" aria-controls="profile"><i class="fas fa-chevron-right"></i> Physics</a>
+				    <a class="nav-link" data-toggle="tab" href="#link1" role="tab" aria-controls="profile"><i class="fas fa-chevron-right"></i> IIT-JEE(ADVANCE)</a>
 				  </li>
 				  <li class="nav-item">
-				    <a class="nav-link" data-toggle="tab" href="#link2" role="tab" aria-controls="messages"><i class="fas fa-chevron-right"></i> Chemistry</a>
+				    <a class="nav-link" data-toggle="tab" href="#link2" role="tab" aria-controls="messages"><i class="fas fa-chevron-right"></i> B.Sc(Agri.)</a>
 				  </li>
 				  <li class="nav-item">
-				    <a class="nav-link" data-toggle="tab" href="#link3" role="tab" aria-controls="settings"><i class="fas fa-chevron-right"></i> Mathematics</a>
+				    <a class="nav-link" data-toggle="tab" href="#link3" role="tab" aria-controls="settings"><i class="fas fa-chevron-right"></i> B.Sc(Hons.)</a>
 				  </li>
 				  <li class="nav-item">
-				    <a class="nav-link" data-toggle="tab" href="#link4" role="tab" aria-controls="settings"><i class="fas fa-chevron-right"></i> Biology</a>
+				    <a class="nav-link" data-toggle="tab" href="#link4" role="tab" aria-controls="settings"><i class="fas fa-chevron-right"></i> Neet</a>
 				  </li>
 				  <li class="nav-item">
-				    <a class="nav-link" data-toggle="tab" href="#link5" role="tab" aria-controls="settings"><i class="fas fa-chevron-right"></i> History</a>
+				    <a class="nav-link" data-toggle="tab" href="#link5" role="tab" aria-controls="settings"><i class="fas fa-chevron-right"></i> TET</a>
 				  </li>
 				  <li class="nav-item">
-				    <a class="nav-link" data-toggle="tab" href="#link6" role="tab" aria-controls="settings"><i class="fas fa-chevron-right"></i> Accounts</a>
-				  </li>
-				  <li class="nav-item">
-				    <a class="nav-link" data-toggle="tab" href="#link7" role="tab" aria-controls="settings"><i class="fas fa-chevron-right"></i> Business Studies</a>
-				  </li>
-				  <li class="nav-item">
-				    <a class="nav-link" data-toggle="tab" href="#link8" role="tab" aria-controls="settings"><i class="fas fa-chevron-right"></i> English</a>
-				  </li>
-				  <li class="nav-item">
-				    <a class="nav-link" data-toggle="tab" href="#link9" role="tab" aria-controls="settings"><i class="fas fa-chevron-right"></i> Punjabi</a>
-				  </li>
-				  <li class="nav-item">
-				    <a class="nav-link" data-toggle="tab" href="#link10" role="tab" aria-controls="settings"><i class="fas fa-chevron-right"></i> Hindi</a>
+				    <a class="nav-link" data-toggle="tab" href="#link6" role="tab" aria-controls="settings"><i class="fas fa-chevron-right"></i> SCC</a>
 				  </li>
 			  </ul>
-			  <!--div class="side_navbar">
-			  	<h5>Other Link</h5>
-			  	<a href=""><i class="fas fa-chevron-right"></i> Sub Heading-1</a>
-			  	<a href=""><i class="fas fa-chevron-right"></i> Sub Heading-2</a>
-			  	<a href=""><i class="fas fa-chevron-right"></i> Sub Heading-3</a>
-			  </div-->
 			  <div class="filter_bar">
 			  	<a href="classwise.html"><i class="fas fa-chevron-right"></i> Class Wise</a>
+				<a href="subjectwise.html"><i class="fas fa-chevron-right"></i> Subject Wise</a>
 			  	<a href="boardmaterial.html"><i class="fas fa-chevron-right"></i> Study Material By Board</a>
-			  	<a href="entrancexam.html"><i class="fas fa-chevron-right"></i> Extrance Exam Wise</a>
 			  	<a href=""><i class="fas fa-chevron-right"></i> GOVT. Exam Wise</a>
 			  	<a href=""><i class="fas fa-chevron-right"></i> UR Interset Wise</a>
 				<a href=""><i class="fas fa-chevron-right"></i> Engineering Study Material</a>
@@ -76,7 +57,7 @@
 				<div class="tab-content">
 					<div class="tab-pane active" id="activelink" role="tabpanel">
 						<div class="main_title">
-							<a href="">Environment</a>
+							<a href="">IIT-JEE(MAINS)</a>
 						</div>
 					  	<div class="text-center mb-2">
 					  		<div class="form-row">
@@ -125,7 +106,7 @@
 					</div>
 				  <div class="tab-pane" id="link1" role="tabpanel">
 					<div class="main_title">
-						<a href="">Physics</a>
+						<a href="">IIT-JEE(ADVANCE)</a>
 					</div>
 					<div class="text-center mb-2">
 						<div class="form-row">
@@ -177,12 +158,8 @@
 				  <div class="tab-pane" id="link4" role="tabpanel">.5..</div>
 				  <div class="tab-pane" id="link5" role="tabpanel">.6..</div>
 				  <div class="tab-pane" id="link6" role="tabpanel">.7..</div>
-				  <div class="tab-pane" id="link7" role="tabpanel">.8..</div>
-				  <div class="tab-pane" id="link8" role="tabpanel">.9..</div>
-				  <div class="tab-pane" id="link9" role="tabpanel">.10..</div>
-				  <div class="tab-pane" id="link10" role="tabpanel">.11..</div>
 				</div>
 			</div>
 		</div>
 	</div>
-    <%- include ../sitelayouts/footer.ejs %>
+  <%- include ../sitelayouts/footer.ejs %>
