--- a/views/site/subjectwise.html
+++ b/views/site/subjectwise.html
@@ -1,12 +1,88 @@
-<%- include ../sitelayouts/header.ejs %>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Landing-Page-3</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<link rel="stylesheet" href="assets/css/owl.carousel.css">
+  </head>
+  <body>
+    <!-- Tob Bar Section -->
+    <!--div class="top_bar">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col">
+            <a href=""><i class="fas fa-phone-volume"></i> +91 85459-87454</a>
+            <a href=""><i class="fas fa-envelope"></i> info@gmail.com</a>
+          </div>
+          <div class="col text-right text-white">
+            <a href="">Login</a>
+            <a href="">Signup</a>
+          </div>
+        </div>
+      </div>
+    </div-->
+    <!-- Navbar Section Start -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-white custom_menu sticky-top">
+      <div class="container-fluid">
+        <a class="navbar-brand text-danger" href="#"><img src="assets/images/Home-Education_Logo.png" alt="" width="130"></a>
+         <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="icon-bar top-bar"></span>
+          <span class="icon-bar middle-bar"></span>
+          <span class="icon-bar bottom-bar"></span>
+          <span class="sr-only">Toggle navigation</span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarResponsive">
+          <ul class="navbar-nav ">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home</a>
+            </li>
+            <li class="nav-item">	
+              <a class="nav-link" href="#">Study Material</a>
+            </li>
+			<li class="nav-item">
+              <a class="nav-link" href="#">Test Urself</a>
+            </li>
+			<li class="nav-item">
+              <a class="nav-link" href="#">Career Guidance</a>
+            </li>
+            <!--li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Test Urself</a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Serivce-1</a>
+                <a class="dropdown-item" href="#">Service-2</a>
+                <a class="dropdown-item" href="#">Service-2</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Career Guidance</a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Client Side</a>
+                <a class="dropdown-item" href="#">Customer Side</a>
+            </li-->
+            <li class="nav-item">
+              <a class="nav-link" href="#">Entrance Exams</a>
+            </li>
+			<li class="nav-item">
+              <a class="nav-link" href="#">Blogs & Discussions</a>
+            </li>
+          </ul>
+          <form class="form-inline my-2 ml-3 my-lg-0">
+		      <button class="btn btn-primary my-2 my-sm-0 register_btn" type="submit">Register</button>
+		  </form>
+        </div>
+      </div>
+    </nav>
 
     <div class="page_heading">
-    	<img src="../images/banner.jpg" alt="" width="100%" height="150">
+    	<img src="assets/images/banner.jpg" alt="" width="100%" height="150">
     	<div class="pagesub_heading">
     		<h1>Subject Wise <span class="main_color">Material</span></h1>
     	</div>
     </div>
-
+      
 	<div class="container-fluid side_tabbar my-3">
 		<div class="row">
 			<div class="col-md-12">
@@ -80,7 +156,7 @@
 						</div>
 					  	<div class="text-center mb-2">
 					  		<div class="form-row">
-						  		<div class="col-md-4 col-sm-6 col-lg-3">
+						  		<div class="col-md-4 col-sm-6 col-lg-3">	
 									<div class="subject_box">
 									  <a href=""><div class="subject_icon">
 										<i class="fas fa-at"></i>
@@ -88,7 +164,7 @@
 									  <h5>Force</h5></a>
 									</div>
 								</div>
-								<div class="col-md-4 col-sm-6 col-lg-3">
+								<div class="col-md-4 col-sm-6 col-lg-3">	
 									<div class="subject_box">
 									  <a href=""><div class="subject_icon">
 										<i class="fas fa-at"></i>
@@ -96,7 +172,7 @@
 									  <h5>Gravtiation</h5></a>
 									</div>
 								</div>
-								<div class="col-md-4 col-sm-6 col-lg-3">
+								<div class="col-md-4 col-sm-6 col-lg-3">	
 									<div class="subject_box">
 									  <a href=""><div class="subject_icon">
 										<i class="fas fa-at"></i>
@@ -104,7 +180,7 @@
 									  <h5>Magnetism</h5></a>
 									</div>
 								</div>
-								<div class="col-md-4 col-sm-6 col-lg-3">
+								<div class="col-md-4 col-sm-6 col-lg-3">	
 									<div class="subject_box">
 									  <a href=""><div class="subject_icon">
 										<i class="fas fa-at"></i>
@@ -112,7 +188,7 @@
 									  <h5>Atoms</h5></a>
 									</div>
 								</div>
-								<div class="col-md-4 col-sm-6 col-lg-3">
+								<div class="col-md-4 col-sm-6 col-lg-3">	
 									<div class="subject_box">
 									  <a href=""><div class="subject_icon">
 										<i class="fas fa-at"></i>
@@ -129,7 +205,7 @@
 					</div>
 					<div class="text-center mb-2">
 						<div class="form-row">
-							<div class="col-md-4 col-sm-6 col-lg-3">
+							<div class="col-md-4 col-sm-6 col-lg-3">	
 								<div class="subject_box">
 								  <a href=""><div class="subject_icon">
 									<i class="fas fa-at"></i>
@@ -137,7 +213,7 @@
 								  <h5>Force</h5></a>
 								</div>
 							</div>
-							<div class="col-md-4 col-sm-6 col-lg-3">
+							<div class="col-md-4 col-sm-6 col-lg-3">	
 								<div class="subject_box">
 								  <a href=""><div class="subject_icon">
 									<i class="fas fa-at"></i>
@@ -145,7 +221,7 @@
 								  <h5>Gravtiation</h5></a>
 								</div>
 							</div>
-							<div class="col-md-4 col-sm-6 col-lg-3">
+							<div class="col-md-4 col-sm-6 col-lg-3">	
 								<div class="subject_box">
 								  <a href=""><div class="subject_icon">
 									<i class="fas fa-at"></i>
@@ -153,7 +229,7 @@
 								  <h5>Magnetism</h5></a>
 								</div>
 							</div>
-							<div class="col-md-4 col-sm-6 col-lg-3">
+							<div class="col-md-4 col-sm-6 col-lg-3">	
 								<div class="subject_box">
 								  <a href=""><div class="subject_icon">
 									<i class="fas fa-at"></i>
@@ -161,7 +237,7 @@
 								  <h5>Atoms</h5></a>
 								</div>
 							</div>
-							<div class="col-md-4 col-sm-6 col-lg-3">
+							<div class="col-md-4 col-sm-6 col-lg-3">	
 								<div class="subject_box">
 								  <a href=""><div class="subject_icon">
 									<i class="fas fa-at"></i>
@@ -185,4 +261,76 @@
 			</div>
 		</div>
 	</div>
-    <%- include ../sitelayouts/footer.ejs %>
+
+    <!-- Footer Section -->
+    <div class="footer_bg">
+      <div class="container-fluid">
+       <div class="row">
+          <div class="col-lg-5 col-sm-12">
+            <div class="footer_link">
+              <img src="assets/images/Home-Education_Logo.png" alt="">
+              <p class="mt-3 mb-1 pr-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. printing and typesetting Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+              <p class="pr-3">Lorem Ipsum has been the industry's standard dummy text. printing and typesetting.</p>
+            </div>
+          </div>
+          <div class="col-lg-2 col-sm-4">
+            <div class="footer_link">
+              <h5>Usefull Links</h5>
+              <a href="#">Home</a>
+              <a href="#">About Us</a>
+              <a href="#">Our Services</a>
+              <a href="#">Testimonial</a>
+              <a href="#">Contact Us</a>
+            </div>
+          </div>
+          <div class="col-lg-2 col-md-4 col-sm-4">
+            <div class="footer_link">
+              <h5>Category</h5>
+              <a href="#"><!--i class="fas fa-angle-right"></i--> Home</a>
+              <a href="#"> About Us</a>
+              <a href="#"> Our Services</a>
+              <a href="#"> Testimonial</a>
+              <a href="#"> Contact Us</a>
+            </div>
+          </div>
+          <div class="col-lg-3 col-sm-4">
+            <div class="footer_contactlink">
+              <h5>Contact Us</h5>
+              <a href=""><i class="fas fa-map-marker-alt mr-2"></i> No 304, Sky Tower, New York, USA</a>
+              <a href=""><i class="fas fa-phone-volume mr-2"></i> +91 85459-87454</a>
+              <a href=""><i class="fas fa-envelope mr-2"></i> info@gmail.com</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+	
+	<!-- Copyright Section -->
+    <div class="copy_right">
+      <div class="container-fluid">
+		<p>	&#169; copyright 2018. All Right Reserved</p>
+      </div>
+    </div>
+       
+     <!-- Js Files -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="assets/js/owl.carousel.js"></script>
+	<script>
+		$(document).ready(function () {
+			$("#owl-demo, #owl-demo1").owlCarousel({
+				//autoPlay: 3000, //Set AutoPlay to 3 seconds
+				items: 5,
+				itemsDesktop: [1199, 4],
+				itemsDesktopSmall: [992, 3],
+				itemsTablet: [768, 2],
+				itemsMobile: [479, 2],
+				stopOnHover: true,
+				loop: true,
+				navigation:true,
+				navigationText: ["<i class='fas fa-angle-right'></i>","<i class='fas fa-angle-left'></i>"]
+			});
+		});
+	</script>
+  </body>
+</html>
