--- a/views/sitelayouts/header.ejs
+++ b/views/sitelayouts/header.ejs
@@ -2,19 +2,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>REB</title>
+    <title>Landing-Page-3</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
-	<link rel="stylesheet" href="/css/owl.carousel.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
+	<link rel="stylesheet" href="../css/owl.carousel.css">
   </head>
   <body>
     <!-- Navbar Section Start -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white custom_menu sticky-top">
       <div class="container-fluid">
-        <a class="navbar-brand text-danger" href="/reb"><img src="/images/Home-Education_Logo.png" alt="" width="130"></a>
+        <a class="navbar-brand text-danger" href="/reb"><img src="../images/Home-Education_Logo.png" alt="" width="130"></a>
          <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="icon-bar top-bar"></span>
           <span class="icon-bar middle-bar"></span>
@@ -24,10 +24,10 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarResponsive">
           <ul class="navbar-nav ">
             <li class="nav-item active">
-              <a class="nav-link" href="/reb">Home</a>
+              <a class="nav-link" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/reb/site/class-wise">Study Material</a>
+              <a class="nav-link" href="#">Study Material</a>
             </li>
 			<li class="nav-item">
               <a class="nav-link" href="#">Test Urself</a>
@@ -43,7 +43,7 @@
             </li>
           </ul>
           <form class="form-inline my-2 ml-3 my-lg-0">
-		      <button class="btn btn-primary my-2 my-sm-0 register_btn" type="submit">Register</button>
+		      <button class="btn btn-success my-2 my-sm-0 register_btn" type="button" data-toggle="modal" data-target="#register">Register</button>
 		  </form>
         </div>
       </div>
