--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,9 @@
 <%- include sitelayouts/header.ejs %>
-
     <div class="main_video">
       <div class="overlay"></div>
       <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-        <source src="/video/ADRA Animated Short- Education.mp4" type="video/mp4">
-          <source src="/video/mov_bbb.ogg" type="video/ogg">
+        <source src="video/ADRA Animated Short- Education.mp4" type="video/mp4">
+          <source src="video/mov_bbb.ogg" type="video/ogg">
       </video>
       <div class="container h-100">
         <div class="d-flex text-center h-100">
@@ -14,6 +13,78 @@
         </div>
       </div>
     </div>
+
+    <div class="container-fluid my-4">
+    	<div class="row">
+    		<div class="col-md-5 col-lg-3 col-sm-5 d-none d-sm-block category_img">
+    			<a href="/reb/subject-wise"><img class="img-fluid" src="../images/2.jpg" alt=""></a>
+    		</div>
+		    <div class="col-md-7 col-lg-9 col-sm-7">
+				<div class="main_title">
+					<a href="/reb/subject-wise">Subject Wise</a>
+				</div>
+				<div id="owl-demo" class="text-center">
+					<div class="item">
+						<div class="section_box">
+						  <a href=""><div class="product_icon">
+							<i class="fas fa-user-graduate"></i>
+						  </div><br>
+						  <h5>Physics</h5></a>
+						</div>
+					</div>
+					<div class="item">
+						<div class="section_box">
+						  <a href=""><div class="product_icon">
+							<i class="fas fa-at"></i>
+						  </div><br>
+						  <h5>Chemistry</h5></a>
+						</div>
+					</div>
+					<div class="item">
+						<div class="section_box">
+						  <a href=""><div class="product_icon">
+							<i class="fas fa-at"></i>
+						  </div><br>
+						  <h5>Mathematics</h5></a>
+						</div>
+					</div>
+					<div class="item">
+						<div class="section_box">
+						  <a href=""><div class="product_icon">
+							<i class="fas fa-at"></i>
+						  </div><br>
+						  <h5>Biology</h5></a>
+						</div>
+					</div>
+					<div class="item">
+						<div class="section_box">
+						  <a href=""><div class="product_icon">
+							<i class="fas fa-at"></i>
+						  </div><br>
+						  <h5>History</h5></a>
+						</div>
+					</div>
+					<div class="item">
+						<div class="section_box">
+						  <a href=""><div class="product_icon">
+							<i class="fas fa-at"></i>
+						  </div><br>
+						  <h5>Accounts</h5></a>
+						</div>
+					</div>
+					<div class="item">
+						<div class="section_box">
+						  <a href=""><div class="product_icon">
+							<i class="fas fa-at"></i>
+						  </div><br>
+						  <h5>Business Studies</h5></a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<div class="bg">
 		<div class="container-fluid">
 	    	<div class="row">
@@ -22,22 +93,14 @@
 						<a href="/reb/class-wise">Class Wise</a>
 					</div>
 					<div id="owl-demo" class="text-center">
-          <% if (locals.data) {
-            %>
-            <% locals.data.forEach(function(cl){
-
-                %>
-                	<div class="item">
-                    <div class="section_box">
-                      <a href=""><div class="product_icon">
-                      <i class="fas fa-at"></i>
-                      </div><br>
-                      <h5><%= cl.class_name %></h5></a>
-                    </div>
-                  </div>
-            <% }) %>
-        <% } %>
-
+						<div class="item">
+							<div class="section_box">
+							  <a href=""><div class="product_icon">
+								<i class="fas fa-at"></i>
+							  </div><br>
+							  <h5>IX</h5></a>
+							</div>
+						</div>
 						<div class="item">
 							<div class="section_box">
 							  <a href=""><div class="product_icon">
@@ -88,8 +151,8 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-5 col-lg-3 col-sm-5 d-none d-sm-block">
-    				<img class="img-fluid" src="/images/Education.jpg" alt="">
+				<div class="col-md-5 col-lg-3 col-sm-5 d-none d-sm-block category_img">
+    				<a href="/reb/class-wise"><img class="img-fluid" src="../images/3.jpg" alt=""></a>
     			</div>
 			</div>
 		</div>
@@ -97,12 +160,12 @@
 
 	<div class="container-fluid my-4">
     	<div class="row">
-    		<div class="col-md-5 col-lg-3 col-sm-5 d-none d-sm-block">
-				<img class="img-fluid" src="/images/Education.jpg" alt="">
+    		<div class="col-md-5 col-lg-3 col-sm-5 d-none d-sm-block category_img">
+				<a href="/reb/board-material"><img class="img-fluid" src="../images/6.jpg" alt=""></a>
 			</div>
 			<div class="col-md-7 col-lg-9 col-sm-7">
 				<div class="main_title">
-					<a href="/reb/subject-wise">Study Material By Board</a>
+					<a href="/reb/board-material">Study Material By Board</a>
 				</div>
 				<div id="owl-demo" class="text-center">
 					<div class="item">
@@ -171,7 +234,7 @@
 	    	<div class="row">
 				<div class="col-md-7 col-lg-9 col-sm-7">
 					<div class="main_title text-right">
-						<a href="">Extrance Exam Wise</a>
+						<a href="/reb/entranc-exam">Entrance Exam Wise</a>
 					</div>
 					<div id="owl-demo" class="text-center">
 						<div class="item">
@@ -232,8 +295,8 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-5 col-lg-3 col-sm-5 d-none d-sm-block">
-    				<img class="img-fluid" src="/images/Education.jpg" alt="">
+				<div class="col-md-5 col-lg-3 col-sm-5 d-none d-sm-block category_img">
+    				<a href="/reb/entranc-exam"><img class="img-fluid" src="../images/7.jpg" alt=""></a>
     			</div>
 			</div>
 		</div>
@@ -241,8 +304,8 @@
 
 	<div class="container-fluid my-4">
     	<div class="row">
-    		<div class="col-md-5 col-lg-3 col-sm-5 d-none d-sm-block">
-				<img class="img-fluid" src="/images/Education.jpg" alt="">
+    		<div class="col-md-5 col-lg-3 col-sm-5 d-none d-sm-block category_img">
+				<a href=""><img class="img-fluid" src="../images/Education.jpg" alt=""></a>
 			</div>
 			<div class="col-md-7 col-lg-9 col-sm-7">
 				<div class="main_title">
@@ -309,4 +372,221 @@
 			</div>
 		</div>
 	</div>
-<%- include sitelayouts/footer.ejs %>
+
+	<div class="bg">
+		<div class="container-fluid">
+	    	<div class="row">
+				<div class="col-md-7 col-lg-9 col-sm-7">
+					<div class="main_title text-right">
+						<a href="">UR Interset Wise</a>
+					</div>
+					<div id="owl-demo" class="text-center">
+						<div class="item">
+							<div class="section_box">
+							  <a href=""><div class="product_icon">
+								<i class="fas fa-at"></i>
+							  </div><br>
+							  <h5>Bussiness</h5></a>
+							</div>
+						</div>
+						<div class="item">
+							<div class="section_box">
+							  <a href=""><div class="product_icon">
+								<i class="fas fa-at"></i>
+							  </div><br>
+							  <h5>Cumputers</h5></a>
+							</div>
+						</div>
+						<div class="item">
+							<div class="section_box">
+							  <a href=""><div class="product_icon">
+								<i class="fas fa-at"></i>
+							  </div><br>
+							  <h5>Latest Tectnologies</h5></a>
+							</div>
+						</div>
+						<div class="item">
+							<div class="section_box">
+							  <a href=""><div class="product_icon">
+								<i class="fas fa-at"></i>
+							  </div><br>
+							  <h5>Latest Mobiles/Cumputers</h5></a>
+							</div>
+						</div>
+						<div class="item">
+							<div class="section_box">
+							  <a href=""><div class="product_icon">
+								<i class="fas fa-at"></i>
+							  </div><br>
+							  <h5>Motivational</h5></a>
+							</div>
+						</div>
+						<div class="item">
+							<div class="section_box">
+							  <a href=""><div class="product_icon">
+								<i class="fas fa-at"></i>
+							  </div><br>
+							  <h5>Fastion</h5></a>
+							</div>
+						</div>
+						<div class="item">
+							<div class="section_box">
+							  <a href=""><div class="product_icon">
+								<i class="fas fa-at"></i>
+							  </div><br>
+							  <h5>Creative Courses</h5></a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-5 col-lg-3 col-sm-5 d-none d-sm-block category_img">
+    				<img class="img-fluid" src="../images/8.jpg" alt="">
+    			</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="container-fluid my-4">
+    	<div class="row">
+    		<div class="col-md-5 col-lg-3 col-sm-5 d-none d-sm-block category_img">
+				<a href=""><img class="img-fluid" src="../images/4.jpg" alt=""></a>
+			</div>
+			<div class="col-md-7 col-lg-9 col-sm-7">
+				<div class="main_title">
+					<a href="">Engineering Study Material</a>
+				</div>
+				<div id="owl-demo" class="text-center">
+					<div class="item">
+						<div class="section_box">
+						  <a href=""><div class="product_icon">
+							<i class="fas fa-at"></i>
+						  </div><br>
+						  <h5>Chemical Engineering</h5></a>
+						</div>
+					</div>
+					<div class="item">
+						<div class="section_box">
+						  <a href=""><div class="product_icon">
+							<i class="fas fa-at"></i>
+						  </div><br>
+						  <h5>Electrical & Electronics</h5></a>
+						</div>
+					</div>
+					<div class="item">
+						<div class="section_box">
+						  <a href=""><div class="product_icon">
+							<i class="fas fa-at"></i>
+						  </div><br>
+						  <h5>Mechanical</h5></a>
+						</div>
+					</div>
+					<div class="item">
+						<div class="section_box">
+						  <a href=""><div class="product_icon">
+							<i class="fas fa-at"></i>
+						  </div><br>
+						  <h5>Cumputer Science</h5></a>
+						</div>
+					</div>
+					<div class="item">
+						<div class="section_box">
+						  <a href=""><div class="product_icon">
+							<i class="fas fa-at"></i>
+						  </div><br>
+						  <h5>Civil</h5></a>
+						</div>
+					</div>
+					<div class="item">
+						<div class="section_box">
+						  <a href=""><div class="product_icon">
+							<i class="fas fa-at"></i>
+						  </div><br>
+						  <h5>Aeronautical</h5></a>
+						</div>
+					</div>
+					<div class="item">
+						<div class="section_box">
+						  <a href=""><div class="product_icon">
+							<i class="fas fa-at"></i>
+						  </div><br>
+						  <h5>Instrumentation</h5></a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="bg">
+		<div class="container-fluid">
+	    	<div class="row">
+				<div class="col-md-7 col-lg-9 col-sm-7">
+					<div class="main_title text-right">
+						<a href="">Medical Study Material</a>
+					</div>
+					<div id="owl-demo" class="text-center">
+						<div class="item">
+							<div class="section_box">
+							  <a href=""><div class="product_icon">
+								<i class="fas fa-at"></i>
+							  </div><br>
+							  <h5>Anatomy</h5></a>
+							</div>
+						</div>
+						<div class="item">
+							<div class="section_box">
+							  <a href=""><div class="product_icon">
+								<i class="fas fa-at"></i>
+							  </div><br>
+							  <h5>Biochemistry</h5></a>
+							</div>
+						</div>
+						<div class="item">
+							<div class="section_box">
+							  <a href=""><div class="product_icon">
+								<i class="fas fa-at"></i>
+							  </div><br>
+							  <h5>Surgery</h5></a>
+							</div>
+						</div>
+						<div class="item">
+							<div class="section_box">
+							  <a href=""><div class="product_icon">
+								<i class="fas fa-at"></i>
+							  </div><br>
+							  <h5>Gynecology</h5></a>
+							</div>
+						</div>
+						<div class="item">
+							<div class="section_box">
+							  <a href=""><div class="product_icon">
+								<i class="fas fa-at"></i>
+							  </div><br>
+							  <h5>Dentistry</h5></a>
+							</div>
+						</div>
+						<div class="item">
+							<div class="section_box">
+							  <a href=""><div class="product_icon">
+								<i class="fas fa-at"></i>
+							  </div><br>
+							  <h5>Veterinery Medicine</h5></a>
+							</div>
+						</div>
+						<div class="item">
+							<div class="section_box">
+							  <a href=""><div class="product_icon">
+								<i class="fas fa-at"></i>
+							  </div><br>
+							  <h5>Microbiology</h5></a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-5 col-lg-3 col-sm-5 d-none d-sm-block category_img">
+    				<a href=""><img class="img-fluid" src="../images/5.jpg" alt=""></a>
+    			</div>
+			</div>
+		</div>
+	</div>
+  <%- include sitelayouts/footer.ejs %>
