--- a/views/sitelayouts/header.ejs
+++ b/views/sitelayouts/header.ejs
@@ -14,7 +14,7 @@
     <!-- Navbar Section Start -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white custom_menu sticky-top">
       <div class="container-fluid">
-        <a class="navbar-brand text-danger" href="/reb"><img src="../images/Home-Education_Logo.png" alt="" width="130"></a>
+        <a class="navbar-brand text-danger" href="/reb"><img src="../images/site-logo.PNG" alt="" width="130"></a>
          <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="icon-bar top-bar"></span>
           <span class="icon-bar middle-bar"></span>
