jitendra new links

--- a/views/site/board-material.ejs
+++ b/views/site/board-material.ejs
@@ -1,7 +1,7 @@
 <%- include ../sitelayouts/header.ejs %>
 
     <div class="page_heading">
-    	<img src="assets/images/banner.jpg" alt="" width="100%" height="150">
+    	<img src="../images/banner.jpg" alt="" width="100%" height="150">
     	<div class="pagesub_heading">
     		<h1>Study <span class="main_color">Material</span> By Board</h1>
     	</div>
@@ -45,9 +45,9 @@
 				  </li>
 			  </ul>
 			  <div class="filter_bar">
-			  	<a href="classwise.html"><i class="fas fa-chevron-right"></i> Class Wise</a>
-			  	<a href="subjectwise.html"><i class="fas fa-chevron-right"></i> Subject Wise</a>
-			  	<a href="entrancexam.html"><i class="fas fa-chevron-right"></i> Extrance Exam Wise</a>
+			  	<a href="subject-wise"><i class="fas fa-chevron-right"></i> Subject Wise</a>
+			  	<a href="class-wise"><i class="fas fa-chevron-right"></i> Class Wise</a>
+			  	<a href="entranc-exam"><i class="fas fa-chevron-right"></i> Extrance Exam Wise</a>
 			  	<a href=""><i class="fas fa-chevron-right"></i> GOVT. Exam Wise</a>
 			  	<a href=""><i class="fas fa-chevron-right"></i> UR Interset Wise</a>
 				<a href=""><i class="fas fa-chevron-right"></i> Engineering Study Material</a>
