--- a/views/site/class-wise.ejs
+++ b/views/site/class-wise.ejs
@@ -1,7 +1,7 @@
 <%- include ../sitelayouts/header.ejs %>
 
     <div class="page_heading">
-    	<img src="images/1.jpg" alt="" width="100%" height="150">
+    	<img src="../images/1.jpg" alt="" width="100%" height="150">
     	<div class="pagesub_heading">
     		<h1>Class Wise Material</h1>
     	</div>
@@ -51,9 +51,10 @@
 			  	<a href=""><i class="fas fa-chevron-right"></i> Sub Heading-3</a>
 			  </div-->
 			  <div class="filter_bar">
-			  	<a href="subjectwise.html"><i class="fas fa-chevron-right"></i> Subject	 Wise</a>
-			  	<a href="index.html"><i class="fas fa-chevron-right"></i> Study Material By Board</a>
-			  	<a href=""><i class="fas fa-chevron-right"></i> Extrance Exam Wise</a>
+			  	<a href="subject-wise"><i class="fas fa-chevron-right"></i> Subject Wise</a>
+			  	<a href="board-material"><i class="fas fa-chevron-right"></i> Study Material By Board</a>
+			  	<a href="entranc-exam"><i class="fas fa-chevron-right"></i> Extrance Exam Wise</a>
+			  	
 			  	<a href=""><i class="fas fa-chevron-right"></i> GOVT. Exam Wise</a>
 			  	<a href=""><i class="fas fa-chevron-right"></i> UR Interset Wise</a>
 				<a href=""><i class="fas fa-chevron-right"></i> Engineering Study Material</a>
