--- a/views/site/entranc-exam.ejs
+++ b/views/site/entranc-exam.ejs
@@ -1,6 +1,6 @@
 <%- include ../sitelayouts/header.ejs %>
     <div class="page_heading">
-    	<img src="assets/images/banner.jpg" alt="" width="100%" height="150">
+    	<img src="../images/banner.jpg" alt="" width="100%" height="150">
     	<div class="pagesub_heading">
     		<h1>Extrance Exam Wise <span class="main_color">Material</span></h1>
     	</div>
@@ -44,9 +44,9 @@
 				  </li>
 			  </ul>
 			  <div class="filter_bar">
-			  	<a href="classwise.html"><i class="fas fa-chevron-right"></i> Class Wise</a>
-				<a href="subjectwise.html"><i class="fas fa-chevron-right"></i> Subject Wise</a>
-			  	<a href="boardmaterial.html"><i class="fas fa-chevron-right"></i> Study Material By Board</a>
+			  	<a href="subject-wise"><i class="fas fa-chevron-right"></i> Subject Wise</a>
+			  	<a href="class-wise"><i class="fas fa-chevron-right"></i> Class Wise</a>
+				<a href="board-material"><i class="fas fa-chevron-right"></i> Study Material By Board</a>
 			  	<a href=""><i class="fas fa-chevron-right"></i> GOVT. Exam Wise</a>
 			  	<a href=""><i class="fas fa-chevron-right"></i> UR Interset Wise</a>
 				<a href=""><i class="fas fa-chevron-right"></i> Engineering Study Material</a>
