--- a/views/site/subject-wise.ejs
+++ b/views/site/subject-wise.ejs
@@ -63,9 +63,9 @@
 			  	<a href=""><i class="fas fa-chevron-right"></i> Sub Heading-3</a>
 			  </div-->
 			  <div class="filter_bar">
-			  	<a href="classwise.html"><i class="fas fa-chevron-right"></i> Class Wise</a>
-			  	<a href="boardmaterial.html"><i class="fas fa-chevron-right"></i> Study Material By Board</a>
-			  	<a href="entrancexam.html"><i class="fas fa-chevron-right"></i> Extrance Exam Wise</a>
+			  	<a href="class-wise"><i class="fas fa-chevron-right"></i> Class Wise</a>
+			  	<a href="board-material"><i class="fas fa-chevron-right"></i> Study Material By Board</a>
+			  	<a href="entranc-exam"><i class="fas fa-chevron-right"></i> Extrance Exam Wise</a>
 			  	<a href=""><i class="fas fa-chevron-right"></i> GOVT. Exam Wise</a>
 			  	<a href=""><i class="fas fa-chevron-right"></i> UR Interset Wise</a>
 				<a href=""><i class="fas fa-chevron-right"></i> Engineering Study Material</a>
